--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   "author": "ArchitectAK <dev.ankit.kkumar@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    
+    "fabric-contract-api": "^2.5.2",
+    "fabric-shim": "^2.5.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^8.38.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "sinon": "^15.0.3",
+    "sinon-chai": "^3.7.0"
   }
 }
